vlib/v/checker/tests/unknown_field_in_struct_literal.vv
struct TileLine {
	ypos int
mut:
	field  [5]int
	points int
	shifts int
}

hline := TileLine{
	pos: 123
}
println(hline)
